20090903 ui/win32/picture.c: use a compat_fd rather than an int (Fred).
20090916 README: change reference to CVS to be Subversion (Fred).
20091006 ui/uijoystick.c: only send a joystick button event if there has been
         an actual change in button state since last poll in the libjsw code
         (fixes bug #2863656) (thanks, Phil Reynolds) (Fred).
20091007 settings.pl: numeric settings don't need to be non-zero to save into
         the settings file (fixes bug #2873277) (thanks, Phil Reynolds) (Fred).
20091016 man/fuse.1: update link to ResiDOS homepage in fuse man page (patch
         #2875612) (Gergely Szasz).
20091019 disk/disk.c: correct mapping of sector length to SECLEN_* macros
         (patch #2875613) (Gergely Szasz).
20091022 disk/{beta.[ch],opus.c,plusd.c},ide/{divide.c,zxatasp.c,zxcf.c},if1.c,
         if2.c,machines/{pentagon.c,pentagon1024.c,pentagon512.c,scorpion.c},
         memory.[ch]: make each peripheral/machine that uses memory paged in via
         /ROMCS have its own copy of the relevant struct (part of patch
         #2880415) (Gergely Szasz).
20091113 man/fuse.1,menu.[ch],menu_data.dat: add a menu item with a hot key to
         allow full screen and windowed mode switching for SDL (feature
         request #1515888) (György Szombathelyi).
20091118 sound/coreaudiosound.c: replace some deprecated functions (Fred).
20091121 input.h,keyboard.[c|dat|pl],ui/widget/{browse.c,debugger.c,error.c,
         filesel.c,memory.c,menu.c,options.pl,picture.c,pokefinder.c,query.c,
         roms.c,select.c,text.c}: some notebooks wire the "standard" return
         key to the same keysym as enter on the number pad, so treat the two
         equivalently (thanks, Marce) (Fred).
20091215 Makefile.am,display.c,rectangle.[ch]: extract dirty rectangle handling
         to its own files (Fred).
20091215 man/fuse.1: fix typo (Fred).
20091216 configure.in: add a '--without-png' option for Gentoo (patch #2915091)
         (José Manuel Ferrer Ortiz).