@@ -38,9 +38,6 @@
 #include "settings.h"
 #include "ui/ui.h"
 #include "ui/uidisplay.h"
-#ifdef USE_WIDGET
-#include "ui/widget/widget.h"
-#endif				/* #ifdef USE_WIDGET */
 
 /* The size of a 1x1 image in units of
    DISPLAY_ASPECT WIDTH x DISPLAY_SCREEN_HEIGHT
@@ -660,11 +657,7 @@ uidisplay_frame_end( void )
     updated_rects[0].h = image_height;
   }
 
-#ifdef USE_WIDGET
-  if ( !( widget_level >= 0 ) && num_rects == 0 ) return;
-#else                   /* #ifdef USE_WIDGET */
-  if ( num_rects == 0 ) return;
-#endif                  /* #ifdef USE_WIDGET */
+  if ( !( ui_widget_level >= 0 ) && num_rects == 0 ) return;
 
   last_rect = updated_rects + num_rects;
 
