@@ -43,6 +43,7 @@
 #include "ui/uidisplay.h"
 #include "joystick.h"
 #include "keyboard.h"
+#include "menu.h"
 #include "options_internals.h"
 #include "periph.h"
 #include "pokefinder/pokefinder.h"
@@ -495,9 +496,6 @@ int widget_end( void )
 
 /* General widget routine */
 
-/* We don't start in a widget */
-int widget_level = -1;
-
 int widget_do( widget_type which, void *data )
 {
   int error;
@@ -505,14 +503,14 @@ int widget_do( widget_type which, void *data )
   /* If we don't have a UI yet, we can't output widgets */
   if( !display_ui_initialised ) return 1;
 
-  if( widget_level == -1 ) uidisplay_frame_save();
+  if( ui_widget_level == -1 ) uidisplay_frame_save();
 
   /* We're now one widget level deeper */
-  widget_level++;
+  ui_widget_level++;
 
   /* Store what type of widget we are and what data we were given */
-  widget_return[widget_level].type = which;
-  widget_return[widget_level].data = data;
+  widget_return[ui_widget_level].type = which;
+  widget_return[ui_widget_level].data = data;
 
   uidisplay_frame_restore();
 
@@ -523,8 +521,8 @@ int widget_do( widget_type which, void *data )
   widget_keyhandler = widget_data[which].keyhandler;
 
   /* Process this widget until it returns */
-  widget_return[widget_level].finished = 0;
-  while( ! widget_return[widget_level].finished ) {
+  widget_return[ui_widget_level].finished = 0;
+  while( ! widget_return[ui_widget_level].finished ) {
     
     /* Go to sleep for a bit */
     timer_sleep( 10 );
@@ -535,23 +533,23 @@ int widget_do( widget_type which, void *data )
 
   /* Do any post-widget processing if it exists */
   if( widget_data[which].finish ) {
-    widget_data[which].finish( widget_return[widget_level].finished );
+    widget_data[which].finish( widget_return[ui_widget_level].finished );
   }
 
   uidisplay_frame_restore();
 
   /* Now return to the previous widget level */
-  widget_level--;
+  ui_widget_level--;
     
-  if( widget_level >= 0 ) {
+  if( ui_widget_level >= 0 ) {
 
     /* If we're going back to another widget, set up its keyhandler and
        draw it again, unless it's already finished */
-    if( ! widget_return[widget_level].finished ) {
+    if( ! widget_return[ui_widget_level].finished ) {
       widget_keyhandler =
-	widget_data[ widget_return[widget_level].type ].keyhandler;
-      widget_data[ widget_return[widget_level].type ].draw(
-        widget_return[widget_level].data
+	widget_data[ widget_return[ui_widget_level].type ].keyhandler;
+      widget_data[ widget_return[ui_widget_level].type ].draw(
+        widget_return[ui_widget_level].data
       );
     }
 
@@ -569,7 +567,7 @@ int widget_do( widget_type which, void *data )
 int
 widget_end_widget( widget_finish_state state )
 {
-  widget_return[ widget_level ].finished = state;
+  widget_return[ ui_widget_level ].finished = state;
   return 0;
 }
 
@@ -578,7 +576,7 @@ int widget_end_all( widget_finish_state state )
 {
   int i;
 
-  for( i=0; i<=widget_level; i++ )
+  for( i=0; i<=ui_widget_level; i++ )
     widget_return[i].finished = state;
 
   return 0;
@@ -773,4 +771,68 @@ ui_widgets_reset( void )
 {
   pokefinder_clear();
   return 0;
+}
+
+void
+ui_popup_menu( int native_key )
+{
+  switch( native_key ) {
+  case INPUT_KEY_F1:
+    fuse_emulation_pause();
+    widget_do( WIDGET_TYPE_MENU, &widget_menu );
+    fuse_emulation_unpause();
+    break;
+  case INPUT_KEY_F2:
+    fuse_emulation_pause();
+    menu_file_savesnapshot( 0 );
+    fuse_emulation_unpause();
+    break;
+  case INPUT_KEY_F3:
+    fuse_emulation_pause();
+    menu_file_open( 0 );
+    fuse_emulation_unpause();
+    break;
+  case INPUT_KEY_F4:
+    fuse_emulation_pause();
+    menu_options_general( 0 );
+    fuse_emulation_unpause();
+    break;
+  case INPUT_KEY_F5:
+    fuse_emulation_pause();
+    menu_machine_reset( 0 );
+    fuse_emulation_unpause();
+    break;
+  case INPUT_KEY_F6:
+    fuse_emulation_pause();
+    menu_media_tape_write( 0 );
+    fuse_emulation_unpause();
+    break;
+  case INPUT_KEY_F7:
+    fuse_emulation_pause();
+    menu_media_tape_open( 0 );
+    fuse_emulation_unpause();
+    break;
+  case INPUT_KEY_F8:
+    menu_media_tape_play( 0 );
+    break;
+  case INPUT_KEY_F9:
+    fuse_emulation_pause();
+    menu_machine_select( 0 );
+    fuse_emulation_unpause();
+    break;
+  case INPUT_KEY_F10:
+    fuse_emulation_pause();
+    menu_file_exit( 0 );
+    fuse_emulation_unpause();
+    break;
+
+  default: break;		/* Remove gcc warning */
+
+  }
+}
+
+void
+ui_widget_keyhandler( int native_key )
+{
+  widget_keyhandler( native_key );
 }
